--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h2 id="title">Welcome to Ember.js</h2>
+{{main-nav}}
 
-{{outlet}}
+<div class="container" style="margin-top: 50px;">
+  <h2 id="title">Welcome to Ember.js</h2>
+
+  {{outlet}}
+</div>
