--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 {{main-nav}}
 
-<div class="container" style="margin-top: 50px;">
+<div class="container">
   <h2 id="title">Welcome to Ember.js</h2>
 
   {{outlet}}
