--- a/app/templates/components/main-nav.hbs
+++ b/app/templates/components/main-nav.hbs
@@ -1,19 +1,19 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            {{#link-to 'index' class="navbar-brand"}}Contact App{{/link-to}}
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li>{{#link-to 'index'}}Home{{/link-to}}</li>
-            <li>{{#link-to 'about'}}About{{/link-to}}</li>
-          </ul>
+            <ul class="nav navbar-nav">
+                {{#link-to 'index' tagName="li"}}<a href>Home</a>{{/link-to}}
+                {{#link-to 'about' tagName="li"}}<a href>About</a>{{/link-to}}
+            </ul>
         </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    </div>
+</nav>
