--- a/app/templates/components/main-nav.hbs
+++ b/app/templates/components/main-nav.hbs
@@ -13,6 +13,7 @@
             <ul class="nav navbar-nav">
                 {{#link-to 'index' tagName="li"}}<a href>Home</a>{{/link-to}}
                 {{#link-to 'about' tagName="li"}}<a href>About</a>{{/link-to}}
+                {{#link-to 'contacts' tagName="li"}}<a href>Contacts</a>{{/link-to}}
             </ul>
         </div><!--/.nav-collapse -->
     </div>
